# MLOps

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
.dvc/: config
MLOps/: data.py  data_issues.py  infer.py  metrics.py  model.py  train.py
configs/: config.py  config.yaml  configs.py
data/: MNIST.dvc
