[tool.poetry]
name = "MLOps"
version = "0.0.1"
description = "Отработка методов MLOps на простом проекте"
authors = ["Yury Batrakov <yury.batrakov@gmail.com>"]
maintainers = ["Yury Batrakov <yury.batrakov@gmail.com>"]
readme = "README.md"
repository = "https://github.com/ShieldVP/MLOps"

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
torch = ">=1.12.0"
torchvision = ">0.15.0"
scikit-learn = ">=1.3.0"
pandas = ">=2.1.0"
tqdm = "^4.66.1"
mlflow = "^2.8.1"
hydra-core = "^1.3.2"
dvc = "^3.30.3"
dvc-gdrive = "^2.20.0"
omegaconf = "^2.3.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.16.0"

[tool.black]
line-length = 90
target-version = ["py39"]

[tool.isort]
src_paths = ["MLOps"]
profile = "black"
line_length = 90
lines_after_imports = 2

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
